--- a/compose.yaml
+++ b/compose.yaml
@@ -1,1 +1,35 @@
-h 
+services:
+  activities:
+    build: ./services/activities
+    env_file:
+      - ./services/activities/.env
+    ports:
+      - "8081:8080"
+
+  # auth:
+  #   build: ./services/auth
+  #   env_file:
+  #     - ./services/auth/.env
+  #   ports:
+  #     - "8082:8080"
+
+  # gym:
+  #   build: ./services/gym
+  #   env_file:
+  #     - ./services/gym/.env
+  #   ports:
+  #     - "8083:8080"
+
+  # mental_health:
+  #   build: ./services/mental_health
+  #   env_file:
+  #     - ./services/mental_health/.env
+  #   ports:
+  #     - "8084:8080"
+
+  # nutrition:
+  #   build: ./services/nutrition
+  #   env_file:
+  #     - ./services/nutrition/.env
+  #   ports:
+  #     - "8085:8080"
