auth service working

--- a/compose.yaml
+++ b/compose.yaml
@@ -1,10 +1,10 @@
 services:
-  activities:
-    build: ./services/activities
-    env_file:
-      - ./services/activities/.env
-    ports:
-      - "8081:8080"
+  # activities:
+  #   build: ./services/activities
+  #   env_file:
+  #     - ./services/activities/.env
+  #   ports:
+  #     - "8081:8080"
 
   auth:
     build: ./services/auth
@@ -13,12 +13,12 @@ services:
     ports:
       - "8082:8080"
 
-  gym:
-    build: ./services/gym
-    env_file:
-      - ./services/gym/.env
-    ports:
-      - "8083:8080"
+  # gym:
+  #   build: ./services/gym
+  #   env_file:
+  #     - ./services/gym/.env
+  #   ports:
+  #     - "8083:8080"
 
   # mental_health:
   #   build: ./services/mental_health
