--- a/compose.yaml
+++ b/compose.yaml
@@ -20,12 +20,12 @@ services:
   #   ports:
   #     - "8083:8080"
 
-  # mental_health:
-  #   build: ./services/mental_health
-  #   env_file:
-  #     - ./services/mental_health/.env
-  #   ports:
-  #     - "8084:8080"
+  mental_health:
+    build: ./services/mental_health
+    env_file:
+      - ./services/mental_health/.env
+    ports:
+      - "8084:8080"
 
   # nutrition:
   #   build: ./services/nutrition
@@ -33,3 +33,18 @@ services:
   #     - ./services/nutrition/.env
   #   ports:
   #     - "8085:8080"
+
+  nutrition:
+    build: .
+    ports:
+      - "9000:9000"
+    depends_on:
+      - ollama-model
+
+  ollama-model:
+    image: ollama/ollama:latest  # Assuming this is the correct image for Ollama
+    ports:
+      - "11434:11434"  # The port your Ollama model is running on
+    environment:
+      - MODEL=llama3  # Set the model to Llama3
+
