--- a/services/nutrition/Dockerfile
+++ b/services/nutrition/Dockerfile
@@ -1,39 +1,11 @@
-###############################################################################
-# Stage 1: Build stage                                                        #
-###############################################################################
-# Use the official Go image for building
-FROM golang:1.23 AS builder
+FROM python:3.9-slim
 
-# Set the working directory inside the builder container
 WORKDIR /app
 
-# Copy dependency files first
-COPY go.mod go.sum ./
+COPY . /app/
 
-# Download dependencies
-RUN go mod download
+RUN pip install --upgrade pip && pip install -r requirements.txt
 
-# Copy the rest of the application source code
-COPY . .
+EXPOSE 9000
 
-# Build the Go application as a static binary
-RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o main main.go
-
-
-###############################################################################
-# Stage 2: Minimal runtime container                                          #
-###############################################################################
-# Use a completely minimal runtime image
-FROM scratch
-
-# Set the working directory in the runtime container
-WORKDIR /root/
-
-# Copy the compiled application binary from the builder stage
-COPY --from=builder /app/main .
-
-# Expose the application's port
-EXPOSE 8080
-
-# Command to run the application
-ENTRYPOINT ["./main"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "9000"]
