--- a/.github/workflows/do_backend_deploy.yml
+++ b/.github/workflows/do_backend_deploy.yml
@@ -22,16 +22,7 @@ jobs:
 
             - name: Create .env file
               run: |
-                echo "MAIL_PASS=${{ secrets.MAIL_PASS }}" >> .env
-                echo "EMAIL_FROM=${{ secrets.EMAIL_FROM }}" >> .env
-                echo "JWT_SECRET=${{ secrets.JWT_SECRET }}" >> .env
-                echo "DB_HOST=${{ secrets.DB_HOST }}" >> .env
-                echo "DB_USER=${{ secrets.DB_USER }}" >> .env
-                echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> .env
-                echo "DB_NAME=${{ secrets.DB_NAME }}" >> .env
-                echo "DB_PORT=${{ secrets.DB_PORT }}" >> .env
-                echo "DB_DIALECT=${{ secrets.DB_DIALECT }}" >> .env
-                echo "MODEL_TOKEN=${{ secrets.MODEL_TOKEN }}" >> .env
+                echo "${{ secrets.ENV_FILE }}" >> .env
 
             - name: Install dependencies
               run: |
