--- a/.github/workflows/do_backend_deploy.yml
+++ b/.github/workflows/do_backend_deploy.yml
@@ -22,7 +22,7 @@ jobs:
 
             - name: Create .env file
               run: |
-                echo "${{ secrets.ENV_FILE }}" >> .env
+                echo "${{ secrets.ENV_FILE }}" >> services/nutrition/tests/.env
 
             - name: Install dependencies
               run: |
