--- a/.github/workflows/do_backend_deploy.yml
+++ b/.github/workflows/do_backend_deploy.yml
@@ -23,6 +23,7 @@ jobs:
             - name: Create .env file
               run: |
                 echo "${{ secrets.ENV_FILE }}" >> services/nutrition/tests/.env
+                echo "${{ secrets.ENV_FILE }}" >> services/mental_health/tests/.env
 
             - name: Install dependencies
               run: |
